unpackaged/main/default/objects/Account_Extension__c/Account_Extension__c.object-meta.xml
<CustomObject>
    <label>Account Extension</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Account Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Extensions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>