unpackaged/main/default/objects/Account_Extension__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Power Pass Account Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Power Pass Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>