unpackaged/main/default/objects/Account_Extension__c/fields/Call_Cycle_Priority__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Priority__c</fullName>
    <label>Call Cycle Priority</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>