unpackaged/main/default/objects/Account_Extension__c/fields/Call_Cycle_Rank__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Rank__c</fullName>
    <label>Call Cycle Rank</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>