unpackaged/main/default/objects/Account_Extension__c/fields/Call_Cycle_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Reason__c</fullName>
    <label>Call Cycle Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reducing</fullName>
            </value>
            <value>
                <fullName>Lapsing</fullName>
            </value>
            <value>
                <fullName>Growing</fullName>
            </value>
            <value>
                <fullName>Maintaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>