unpackaged/main/default/objects/Account_Extension__c/fields/Current_Quarter_Spend_M2__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Spend_M2__c</fullName>
    <description>SFSUP-725</description>
    <label>Current Quarter Spend M2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>