unpackaged/main/default/objects/Account_Extension__c/fields/Digitally_Managed__c.field-meta.xml
<CustomField>
    <fullName>Digitally_Managed__c</fullName>
    <label>Digital Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>