unpackaged/main/default/objects/Account_Extension__c/fields/Life_Cycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle_Stage__c</fullName>
    <label>Life Cycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Growing</fullName>
            </value>
            <value>
                <fullName>Maintaining</fullName>
            </value>
            <value>
                <fullName>Reducing</fullName>
            </value>
            <value>
                <fullName>Lapsing</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>