unpackaged/main/default/objects/Account_Extension__c/fields/Purchase_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Frequency__c</fullName>
    <label>Purchase Frequency</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>