unpackaged/main/default/objects/Account_Extension__c/fields/Quarter_Average__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Average__c</fullName>
    <description>SFSUP-725</description>
    <label>Quarter Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>