unpackaged/main/default/objects/Account_Extension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Last_Transaction_Date__c</columns>
    <columns>Call_Cycle_Reason__c</columns>
    <columns>Call_Cycle_Priority__c</columns>
    <columns>Call_Cycle_Rank__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>